@@ -120,6 +120,11 @@
 				PORTB = ((PORTB & ~LedMask) | ActiveMask);
 			}
 			
+			static inline void LEDs_ToggleLEDs(const uint8_t LEDMask)
+			{
+				PORTB ^= LEDMask;
+			}
+
 			static inline uint8_t LEDs_GetLEDs(void) ATTR_WARN_UNUSED_RESULT;
 			static inline uint8_t LEDs_GetLEDs(void)
 			{
